--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ jar {
 
 task sourcesZip(type: Jar, dependsOn: classes) {
   classifier 'sources'
-  baseName 'pty4j'
+  baseName 'pty4j-bashsupport'
   from sourceSets.main.allSource
   filter(FixCrLfFilter.class, eol:FixCrLfFilter.CrLf.newInstance("lf"))
 }
@@ -95,7 +95,7 @@ publishing {
   publications {
     MyPublication(MavenPublication) {
       from components.java
-      groupId 'org.jetbrains.pty4j'
+      groupId 'com.bashsupport.pty4j'
       artifactId 'pty4j'
       version System.getenv('BINTRAY_USER') != null ? projectVersion : projectVersion + '-SNAPSHOT'
       artifact sourcesZip
@@ -136,10 +136,10 @@ bintray {
 
   pkg {
     repo = 'pty4j'
-    name = 'org.jetbrains.pty4j:pty4j'
+    name = 'com.bashsupport.pty4j:pty4j'
     userOrg = 'jetbrains'
     licenses = ['EPL-1.0']
-    vcsUrl = 'https://github.com/JetBrains/pty4j.git'
+    vcsUrl = 'https://github.com/jansorg/pty4j.git'
 
     version {
       name = projectVersion
