--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
   id 'java-library'
   id 'com.jfrog.bintray' version '1.8.4'
   id 'maven-publish'
+//  id "com.github.johnrengelman.shadow" version "5.1.0"
 }
 
 apply plugin: 'maven-publish'
