--- a/native/Makefile_linux
+++ b/native/Makefile_linux
@@ -29,11 +29,11 @@ INSTALL_DIR_LINUX_X86 = ../os/$(LINUX)/$(ARCH_X86)
 INSTALL_DIR_LINUX_X86_64 = ../os/$(LINUX)/$(ARCH_X86_64)
 INSTALL_DIR_LINUX_PPC64LE = ../os/$(LINUX)/$(ARCH_PPC64LE)
 
-LIB_NAME_PTY = libpty.so
+LIB_NAME_PTY = libpty-bashpro.so
 
-LIB_NAME_FULL_PTY_LINUX_X86 = $(INSTALL_DIR_LINUX_X86)/libpty.so
-LIB_NAME_FULL_PTY_LINUX_X86_64 = $(INSTALL_DIR_LINUX_X86_64)/libpty.so
-LIB_NAME_FULL_PTY_LINUX_PPC64LE = $(INSTALL_DIR_LINUX_PPC64LE)/libpty.so
+LIB_NAME_FULL_PTY_LINUX_X86 = $(INSTALL_DIR_LINUX_X86)/libpty-bashpro.so
+LIB_NAME_FULL_PTY_LINUX_X86_64 = $(INSTALL_DIR_LINUX_X86_64)/libpty-bashpro.so
+LIB_NAME_FULL_PTY_LINUX_PPC64LE = $(INSTALL_DIR_LINUX_PPC64LE)/libpty-bashpro.so
 
 OBJS_PTY_X86 = exec_pty_$(ARCH_X86).o openpty_$(ARCH_X86).o pfind_$(ARCH_X86).o
 OBJS_PTY_X86_64 = exec_pty_$(ARCH_X86_64).o openpty_$(ARCH_X86_64).o pfind_$(ARCH_X86_64).o
