--- a/build.gradle
+++ b/build.gradle
@@ -82,12 +82,15 @@ task testJar(type: Test, dependsOn: [jar, testClasses]) {
 check.dependsOn test, testJar
 
 dependencies {
+  compileOnly 'org.jetbrains.pty4j:pty4j:0.9.6'
   compileOnly 'org.jetbrains.pty4j:purejavacomm:0.0.11.1'
+
   implementation 'org.jetbrains:annotations:16.0.2'
   implementation 'com.google.guava:guava:25.1-jre'
   implementation "log4j:log4j:1.2.14"
   implementation 'net.java.dev.jna:jna:4.5.0'
   implementation 'net.java.dev.jna:jna-platform:4.5.0'
+
   testImplementation 'junit:junit:4.12'
 }
 
